--- a/pages/formic/scss/style.scss
+++ b/pages/formic/scss/style.scss
@@ -194,27 +194,8 @@ a {
 		padding: 20px;
 	}
 
-	&__edit-area__block-flex{
-		display: flex;
-		align-items: center;
-		
-		&__item-left{
-			flex: 1 1 auto;
-			margin: 0px 15px 0px 10px;
-		}
-		&__item-right{
-			flex: 1 1 auto;
-			margin: 0 10px;
-			
-		}
-	}
-	&__current-size{
-		font-size: 18px;
-	}
 	
-	&__edit-form{
 
-	}
 	&__input-size{
 		background-color: #1c2a38;
 		width: 35px;
@@ -225,56 +206,24 @@ a {
 	}
 }
 
-.grid{
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	&__inner{
-		
-		display: grid;
-        grid-template-columns: repeat(10, 30px);
-        grid-gap: 2px;
-        margin: 20px;
-		
+
+
+.game{
+	width: 100%;
+	height: 700px;
+	.game__inner {
+		position: relative;
+		width: 100%;
+		background-color: #394b5b;
+		height: 700px;
+		border-radius: 10px;
 	}
-	&__item{
-		width: 30px;
-		height: 30px;
-		background-color: #f0f0f0;
-		
-		padding: 10px;
-		cursor: pointer;
-		transition: background-color 0.4s;
-		transition: transform 0.4s;
-		&.active{
-			background-color: #243647;
-		}
 
-		&.start{
-			background-color: rgb(165, 56, 56);
-		}
-
-		&.end{
-			background-color: green;
-		}
-		&.border{
-			background-color: gray;
-		}
-
-		&:hover {
-			background-color: #2d83d8;
-			transform: scale(0.95);
-		}
-		&.yellow{
-			background-color: rgb(218, 218, 43);
-		}
-		&.orange{
-			background-color: orange;
-		}
-		&.red{
-			background-color: red;
-		}
+	&__dot{
+		width: 10px;
+		height: 10px;
+		border-radius: 50%;
+		position: absolute;
+		background-color: pink;
 	}
-	
-	
 }
