--- a/pages/formic/css/style.css
+++ b/pages/formic/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   padding: 0px;
   margin: 0px;
@@ -132,6 +133,9 @@ a {
 .menu__item:hover {
   background-color: #1A80E5;
 }
+.menu__item-active {
+  background-color: #1A80E5;
+}
 
 .content {
   margin: 0px 160px 0px 160px;
@@ -177,19 +181,63 @@ a {
   background: linear-gradient(145deg, #1a2a36, #1a80e5);
   transition: background-color 0.6s ease, box-shadow 0.6s ease;
 }
-.tools__edit-area__inner {
+.tools__program {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.tools__program__button {
+  margin: 0px 7px;
+}
+.tools__block {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.tools__input-block {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 20px;
 }
-.tools__input-size {
-  background-color: #1c2a38;
-  width: 35px;
-  height: 35px;
-  border-radius: 6px;
-  text-align: center;
-  margin-left: 10px;
+
+.tools__input {
+  -webkit-appearance: none; /* убирает стандартный стиль ползунка */
+  width: 200px;
+  height: 8px;
+  border-radius: 5px;
+  background: linear-gradient(145deg, #243647, #1A80E5);
+  outline: none;
+  transition: background 0.3s ease-in-out;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.tools__input:hover {
+  background: linear-gradient(145deg, #1A80E5, #243647);
+}
+
+.tools__input::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: linear-gradient(145deg, #1A2A36, #1A80E5);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  -webkit-transition: transform 0.2s ease, box-shadow 0.2s ease;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.tools__input::-webkit-slider-thumb:hover {
+  transform: scale(1.1);
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.5);
+}
+
+.tools__value {
+  font-size: 14px;
+  color: #1A80E5; /* Цвет текста */
+  margin-left: 5px;
+  font-weight: bold;
 }
 
 .game {
@@ -204,9 +252,78 @@ a {
   border-radius: 10px;
 }
 .game__dot {
-  width: 10px;
-  height: 10px;
+  width: 14px;
+  height: 14px;
   border-radius: 50%;
   position: absolute;
   background-color: pink;
+  z-index: 10;
+}
+.game__line {
+  position: absolute;
+  width: 2px;
+  height: 2px;
+  background-color: rgb(101, 101, 213);
+  z-index: 5;
+  transform-origin: top left; /* Точка начала линии */
+  pointer-events: none;
+}
+.game__line-player {
+  background-color: rgb(12, 12, 89);
+}
+
+.stats {
+  display: flex;
+  justify-content: space-around;
+}
+.stats__block {
+  padding: 20px;
+}
+.stats__name {
+  margin-bottom: 10px;
+}
+.stats__data {
+  font-size: 16px;
+  margin-top: 7px;
+  color: rgb(161, 161, 161);
+}
+
+.sparing {
+  height: 0px;
+  visibility: hidden;
+}
+.sparing__name {
+  margin-top: 20px;
+  font-size: 18px;
+}
+.sparing__tools {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 15px 0px;
+}
+.sparing-visited {
+  transition: all 0.5s;
+  height: 100%;
+  visibility: visible;
+}
+.sparing__current-stats {
+  margin-top: 5px;
+  color: rgb(161, 161, 161);
+}
+.sparing__block {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.tools__button-off {
+  width: 0px;
+  visibility: hidden;
+}
+
+.tools__button-on {
+  visibility: visible;
+  margin-left: 10px;
 }/*# sourceMappingURL=style.css.map */
