--- a/pages/clastorization/scss/style.scss
+++ b/pages/clastorization/scss/style.scss
@@ -136,7 +136,9 @@ a {
 		&:hover {
 			background-color: #1A80E5;
 		}
-		
+		&-active{
+			background-color: #1A80E5;
+		}
 	}
 	
 }
@@ -353,7 +355,7 @@ a {
 		transition: background-color 0.6s ease, box-shadow 0.6s ease;
 	}
 }
-#k-means-field, #dbscan-field, #other-field {
+#k-means-field, #dbscan-field, #agglomerative-field {
 	display: none;
 }
 .point-new {
