--- a/pages/ai/public/style.css
+++ b/pages/ai/public/style.css
@@ -125,10 +125,16 @@
     justify-content: space-between;
   }
   .menu__item {
-    padding: 10px 18px;
+
     border-radius: 12px;
     transition: background-color 0.3s;
   }
+  .menu__item a{
+	display: block;
+	padding: 10px 18px;
+	border-radius: 12px;
+	transition: background-color 0.3s;
+}
   .menu__item:hover {
     background-color: #1A80E5;
   }
